--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <header>
         <h1>
-            Hola, soy Angel Rodrigo
+            Hi!, I'm Angel Rodrigo
         </h1>
-        <p>Estudiante de ITC en el Tecnológico de Monterrey. Me gusta la creatividad y la tecnología</p>
+        <p> ITC student at Tecnológico de Monterrey who loves combining creativity with technology</p>
         <!-- Theme toggle -->
         <label for="theme" class="theme">
         <span class="theme__toggle-wrap">
@@ -40,14 +40,14 @@
     </header>
 
     <section id="about">
-        <h2>Sobre mí</h2>
-        <p>Soy estudiante de Ingeniería en Tecnologías Computacionales en el Tecnológico de Monterrey, con interés en el desarrollo web y la creación de experiencias visuales e interactivas. Me motiva combinar tecnología, creatividad y diseño para construir soluciones funcionales y atractivas.</p>
+        <h2>About me</h2>
+        <p>I am a Computer Technologies Engineering student at Tecnológico de Monterrey, with an interest in web development and the creation of visual and interactive experiences. I am motivated by combining technology, creativity, and design to build functional and engaging solutions.</p>
     </section>
 
     <section id="projects">
-        <h2>Proyectos</h2>
+        <h2>Projects</h2>
         <div class="projects-container">
-            <div class="project-card" data-project="portafolio">Mi página personal (Este sitio)</div>
+            <div class="project-card" data-project="portafolio">Personal portfolio (This website)</div>
             <div class="project-card" data-project="bluefin">Bluefin</div>
             <div class="project-card" data-project="beyond">Beyond</div>
 
@@ -55,7 +55,7 @@
     </section>
 
     <section id="contact">
-        <h2>Contacto</h2>
+        <h2>Contact</h2>
 
         <a href="https://github.com/Angel-Rodrigo316" target="_blank" class="contact-btn">
         GitHub
@@ -66,7 +66,7 @@
         </a>
 
         <a href="tel:+525572114687" class="contact-btn">
-            Teléfono
+            Phone number
         </a>
     </section>
 
@@ -77,7 +77,7 @@
             <p id="modalDescription"></p>
 
             <a id="modalLink" href="#" target="_blank" class="modal-link hidden">
-                Ver proyecto
+                View project
             </a>
         </div>
     </div>
