--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         GitHub
         </a>
 
-        <a href="https://www.linkedin.com/in/angel-rodrigo-peña-alvarez-300760336" target="_blank" class="contact-btn">
+        <a href="index.html" target="_blank" class="contact-btn">
             LinkedIn
         </a>
 
