--- a/index.html
+++ b/index.html
@@ -45,14 +45,26 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="projects-container">
-            <div class="project-card" data-project="portafolio">Personal portfolio (This website)</div>
-            <div class="project-card" data-project="bluefin">Bluefin</div>
-            <div class="project-card" data-project="beyond">Beyond</div>
+  <h2>Projects</h2>
 
-        </div>
-    </section>
+  <div class="carousel-3d">
+    <button class="nav prev">‹</button>
+
+    <div class="carousel-track">
+      <div class="project-card" data-project="portafolio">
+        Personal portfolio
+      </div>
+      <div class="project-card" data-project="bluefin">
+        Bluefin
+      </div>
+      <div class="project-card" data-project="beyond">
+        Beyond
+      </div>
+    </div>
+
+    <button class="nav next">›</button>
+  </div>
+</section>
 
     <section id="contact">
         <h2>Contact</h2>
