Carrusel responsive intento 2

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
     </header>
 
+    <main>
+
     <section id="about">
         <h2>About me</h2>
         <p>I am a Computer Technologies Engineering student at Tecnológico de Monterrey, with an interest in web development and the creation of visual and interactive experiences. I am motivated by combining technology, creativity, and design to build functional and engaging solutions.</p>
@@ -51,15 +53,11 @@
     <button class="nav prev">‹</button>
 
     <div class="carousel-track">
-      <div class="project-card" data-project="portafolio">
-        Personal portfolio
-      </div>
-      <div class="project-card" data-project="bluefin">
-        Bluefin
-      </div>
-      <div class="project-card" data-project="beyond">
-        Beyond
-      </div>
+    <div class="project-card" data-project="portafolio"> Personal portfolio </div> 
+    <div class="project-card" data-project="bluefin"> Bluefin </div>
+    <div class="project-card" data-project="beyond"> Beyond </div>
+
+
     </div>
 
     <button class="nav next">›</button>
@@ -81,6 +79,7 @@
             Phone number
         </a>
     </section>
+    </main>
 
     <div id="modal" class="modal hidden">
         <div class="modal-content">
@@ -97,4 +96,5 @@
     <script src="script.js"></script>
     
 </body>
+
 </html>
