--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- Vendita linea de codigo -->
     <title>Angel | Portafolio </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="navbar">
+  <ul class="nav-links">
+    <li><a href="#">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
     <header>
         <h1>
@@ -46,24 +54,6 @@
         <h2>About me</h2>
         <p>I am a Computer Technologies Engineering student at Tecnológico de Monterrey, with an interest in web development and the creation of visual and interactive experiences. I am motivated by combining technology, creativity, and design to build functional and engaging solutions.</p>
     </section>
-
-    <section id="projects">
-  <h2>Projects</h2>
-
-  <div class="carousel-3d">
-    <button class="nav prev">‹</button>
-
-    <div class="carousel-track">
-    <div class="project-card" data-project="portafolio"> Personal portfolio </div> 
-    <div class="project-card" data-project="bluefin"> Bluefin </div>
-    <div class="project-card" data-project="beyond"> Beyond </div>
-
-
-    </div>
-
-    <button class="nav next">›</button>
-  </div>
-</section>
 
     <section id="contact">
         <h2>Contact</h2>
