--- a/about.html
+++ b/about.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Angel | Projects</title>
+  <title>Angel | About</title>
 
-  <!-- CSS -->
+  <!-- CSS principal -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="projects.css">
 </head>
 <body>
 
+<!-- NAVBAR -->
 <nav class="navbar">
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="about.html" class="active">About</a></li>
     <li><a href="projects.html">Projects</a></li>
     <li><a href="index.html#contact">Contact</a></li>
   </ul>
 </nav>
 
 <!-- Theme toggle -->
-<label class="theme">
+<label for="theme" class="theme">
   <span class="theme__toggle-wrap">
     <input 
       id="themeToggle"
@@ -45,39 +45,33 @@
   </span>
 </label>
 
+
 <main>
-<section id="projects">
-  <h2>Projects</h2>
 
-  <div class="carousel-3d">
-    <button class="nav prev">‹</button>
+  <!-- ABOUT SECTION -->
+  <section id="about" class="about-page">
+    <h2>About me</h2>
 
-    <div class="carousel-track">
-      <div class="project-card" data-project="portafolio">Personal portfolio</div>
-      <div class="project-card" data-project="bluefin">Bluefin</div>
-      <div class="project-card" data-project="beyond">Beyond</div>
-    </div>
+    <p>
+      I am a Computer Technologies Engineering (ITC) student at Tecnológico de Monterrey, 
+      with a strong interest in web development and the creation of visual and interactive experiences.
+    </p>
 
-    <button class="nav next">›</button>
-  </div>
-</section>
+    <p>
+      I enjoy combining technology, creativity, and design to build functional and engaging digital solutions.
+      My work focuses on clean interfaces, intuitive user experiences, and meaningful projects.
+    </p>
+
+    <p>
+      Beyond technology, I am passionate about dance and sports, which have helped me develop discipline,
+      teamwork, and creativity — skills that I bring into my professional projects.
+    </p>
+  </section>
+
 </main>
 
-<!-- Modal -->
-<div id="modal" class="modal hidden">
-  <div class="modal-content">
-    <span id="closeModal" class="close">&times;</span>
-    <h3 id="modalTitle"></h3>
-    <p id="modalDescription"></p>
-    <a id="modalLink" href="#" target="_blank" class="modal-link hidden">
-      View project
-    </a>
-  </div>
-</div>
-
-<!-- JS -->
+<!-- JS (para modo oscuro) -->
 <script src="script.js"></script>
-<script src="projects.js"></script>
 
 </body>
 </html>
